--- a/b08207070hw2/cookie.html
+++ b/b08207070hw2/cookie.html
@@ -57,7 +57,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="homework2.html">Home</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index_homework2.html">Home</a>
                     </li>
 
                     <li class="nav-item dropdown mx-0 mx-lg-1">
